--- a/new.html
+++ b/new.html
@@ -201,9 +201,9 @@
 
             </div>
         </div>
-        <br>
+        <br><br>
         <!--     -->
-        <div class="justify-content-center text-center m-2">
+        <div class="justify-content-center text-center m-5">
             <span class="  bg-primary-subtle rounded-pill p-2 fw-bold text-dark align-items-center word-wrap ">Service /
                 Features </span>
             <br> <br>
@@ -214,7 +214,7 @@
         <br>
 
         <!-- box-3 -->
-        <div class="container mt-1">
+        <div class="container">
             <div class="row">
 
                 <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3 ">
@@ -267,10 +267,28 @@
             </div>
         </div>
         </div>
-<br><br>
+
     </main>
 
-  
+    <!-- <div class="container">
+        <div class="row">
+
+            <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-3 col-xxl-3 ">
+                <div class="bx1">
+                    <div class="my-3 sq">
+                        <i class="fa-solid fa-pen-nib fa-2xl   lh-lg  text-center d-block mx-auto rounded-pill "
+                            style="color: #ffff; width: 60px; height: 60px; "></i>
+                    </div>
+                    <h5 class=" text-primary text-center fw-bold ">Creative Design </h5>
+                    <p class="text-center"> Lorem ipsum dolor sit amet adipisicing elit. Fuga cumque nostrum autem
+                        aspernatur hic pariatur. </p>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
